--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav"
-    app:startDestination="@id/signInFragment">
+    app:startDestination="@id/blankFragment">
 
     <fragment
         android:id="@+id/signUpFragment"
@@ -15,4 +15,19 @@
         android:name="my.com.fashionappstaff.ui.SignInFragment"
         android:label="fragment_sign_in"
         tools:layout="@layout/fragment_sign_in" />
+    <fragment
+        android:id="@+id/insertProductFragment"
+        android:name="my.com.fashionappstaff.ui.InsertProductFragment"
+        android:label="fragment_insert_product"
+        tools:layout="@layout/fragment_insert_product" />
+    <fragment
+        android:id="@+id/listProductFragment"
+        android:name="my.com.fashionappstaff.ui.ListProductFragment"
+        android:label="fragment_list_product"
+        tools:layout="@layout/fragment_list_product" />
+    <fragment
+        android:id="@+id/blankFragment"
+        android:name="my.com.fashionappstaff.ui.BlankFragment"
+        android:label="fragment_blank"
+        tools:layout="@layout/fragment_blank" />
 </navigation>
