--- a/app/src/main/res/drawable/item_selector.xml
+++ b/app/src/main/res/drawable/item_selector.xml
@@ -3,6 +3,6 @@
 
     <item android:state_pressed="true" android:color="@color/black"/>
     <item android:state_checked="true" android:color="@color/black"/>
-    <item android:color="@color/white"/>
+    <item android:color="@color/light_white"/>
 
 </selector>
