--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -93,7 +93,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:fontFamily="sans-serif"
-                                android:inputType="textEmailAddress"
+                                android:inputType="text"
                                 android:textColor="@color/black" />
 
                         </com.google.android.material.textfield.TextInputLayout>
@@ -204,7 +204,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:fontFamily="sans-serif"
-                                android:inputType="text"
+                                android:inputType="numberDecimal"
                                 android:textColor="@color/black" />
 
                         </com.google.android.material.textfield.TextInputLayout>
