--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -5,15 +5,11 @@
         android:title="@string/home"
         android:icon="@drawable/ic_home" />
 
-    <item android:id="@+id/nav_like"
+    <item android:id="@+id/nav_product"
         android:title="@string/product"
         android:icon="@drawable/ic_shop" />
 
-    <item android:id="@+id/nav_search"
-        android:title="@string/search"
-        android:icon="@drawable/ic_search" />
-
-    <item android:id="@+id/nav_shop"
+    <item android:id="@+id/nav_reward"
         android:title="@string/voucher"
         android:icon="@drawable/ic_qrcode" />
 
