--- a/app/src/main/res/layout/fragment_list_product.xml
+++ b/app/src/main/res/layout/fragment_list_product.xml
@@ -24,14 +24,13 @@
         android:id="@+id/txtItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgBack" />
+        tools:layout_editor_absoluteY="66dp" />
 
     <ImageView
-        android:id="@+id/imgBack"
+        android:id="@+id/imgListProductBack"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginStart="20dp"
@@ -39,4 +38,5 @@
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
