--- a/app/src/main/res/layout/item_reward.xml
+++ b/app/src/main/res/layout/item_reward.xml
@@ -62,7 +62,7 @@
                 tools:text="Reward Quantity" />
 
             <Button
-                android:id="@+id/btnDelete"
+                android:id="@+id/btnListRewardDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -70,8 +70,10 @@
                 android:layout_marginBottom="15dp"
                 android:minWidth="0dp"
                 android:paddingHorizontal="8dp"
+                android:textColor="#FFFFFF"
                 app:icon="@drawable/ic_delete"
                 app:iconPadding="0dp"
+                app:iconTint="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtRewardQuantity"
