--- a/app/src/main/res/values/customer_styles.xml
+++ b/app/src/main/res/values/customer_styles.xml
@@ -5,4 +5,8 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="RoundedSquare">
+        <item name="cornerSize">15%</item>
+    </style>
+
 </resources>
