--- a/app/src/main/res/layout/fragment_payment_report.xml
+++ b/app/src/main/res/layout/fragment_payment_report.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.PaymentReportFragment" >
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imgBack"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginStart="20dp"
