--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -174,7 +174,13 @@
         android:id="@+id/paymentReportFragment"
         android:name="my.com.fashionappstaff.ui.PaymentReportFragment"
         android:label="fragment_payment_report"
-        tools:layout="@layout/fragment_payment_report" />
+        tools:layout="@layout/fragment_payment_report" >
+        <action
+            android:id="@+id/action_paymentReportFragment_to_staffProfileFragment"
+            app:destination="@id/staffProfileFragment"
+            app:popUpTo="@id/paymentReportFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/resetPasswordFragment"
         android:name="my.com.fashionappstaff.ui.ResetPasswordFragment"
